--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,12 @@ body
 	margin-bottom:35px;
 	margin-top:35px;
 	line-height:18px;
+	font-size:14px;
 }
 
 .text h1
 {
-	font_size:15px;
+	font-size:32px;
 	color:#2588c9;
 }
 
@@ -51,10 +52,16 @@ body
 	text-align:center;
 }
 
+.text h3
+{
+	color:#2588c9;
+	font-size:24px;
+}
+
 #map
 {
 	width:950px;
-	height:450px;
+	height:500px;
 }
 
 #map_01
