--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,66 @@
 @charset "utf-8";
 /* CSS Stylesheet */
 
+#banner
+{
+	width:950px;
+	height:150px;
+	margin:0 auto;
+	background:url(../images/banner2.jpg) no-repeat;
+	border-bottom:1px solid #2588c9;
+}
+
+
+#MainNav {
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 13px;
+	font-weight: bold;
+}
+
+
+#MainNav ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	float: left;
+	width: 950px;
+	background: #00a6dd url(../images/mainNavBg2.gif) repeat-x;
+	border-bottom:1px solid #2588c9;
+}
+
+
+#MainNav ul li {
+	float: left;
+}
+
+
+#MainNav ul a {
+	display: block;
+	float: left;
+	padding: 0 21px;
+	line-height: 40px;
+	background: url(../images/mainNavBorder2.gif) repeat-y left top;
+	text-decoration: none;
+	color: #ffffff;
+}
+
+#MainNav ul .home a {
+   background: none;
+   }
+
+#MainNav ul a:hover {
+	color: #ffffff;
+	background: url(../images/hover.gif)
+
+}
+
+
+#MainNav ul .first a {
+	background: url(../images/hover.gif);
+
+}
+
+
 body
 {
 	margin:0;
@@ -21,14 +81,7 @@ body
 	margin-bottom:35px;
 }
 
-#banner
-{
-	width:950px;
-	height:150px;
-	margin:0 auto;
-	background:url(../images/banner2.jpg) no-repeat;
-	border-bottom:1px solid #2588c9;
-}
+
 
 .text
 {
@@ -37,11 +90,12 @@ body
 	margin-bottom:35px;
 	margin-top:35px;
 	line-height:18px;
+	font-size:14px;
 }
 
 .text h1
 {
-	font_size:15px;
+	font-size:32px;
 	color:#2588c9;
 }
 
@@ -51,10 +105,21 @@ body
 	text-align:center;
 }
 
+.text h3
+{
+	color:#2588c9;
+	font-size:24px;
+}
+
+.text li
+{
+	color:#2588c9;
+}
+
 #map
 {
 	width:950px;
-	height:450px;
+	height:500px;
 }
 
 #map_01
@@ -85,49 +150,16 @@ body
 	float:right;
 }
 
-#navbar
-{
-	width:950px;
-	height:40px;
-	border-bottom:1px solid #2588c9;
-}
-
-#button_1
-{
-	width:190px;
-	height:40px;
-	background-color:#b9e3fc;
-	float:left;
-}
-
-#button_2
-{
-	width:190px;
-	height:40px;
-	background-color:#b9e3fc;
-	float:left;
-}
-
-#button_3
-{
-	width:190px;
-	height:40px;
-	background-color:#b9e3fc;
-	float:left;
-}
-
-#button_4
-{
-	width:190px;
-	height:40px;
-	background-color:#b9e3fc;
-	float:left;
-}
-
-#button_5
-{
-	width:190px;
-	height:40px;
-	background-color:#b9e3fc;
-	float:left;
+#Footer p{
+   font-family: verdana, arial, helvetica, sans-serif;
+   font-size: 9px;
+   text-indent: 10px;
+   text-align: center;
+   margin:0 auto;
+   padding-top: 6px;
+   padding-bottom: 6px;
+	float: left;
+	width: 950px;
+	height: 13px;
+	background: #00628b;
 }
